# llm-riskscenes

./: LICENSE  PROJECT_COMPLETE.md  PROJECT_SELF_CHECK.md  QUICK_START.md  README.md  demo.py  pyproject.toml  requirements.txt  setup.py
configs/: default.yaml  production.yaml
datasets/scenarios/: civic_scenarios.json  education_scenarios.json  finance_scenarios.json  healthcare_scenarios.json  legal_scenarios.json  social_scenarios.json
docs/: api_reference.md  contributing.md  installation.md
examples/: basic_evaluation.py  model_comparison.py  quickstart.md
src/lmse/: __init__.py  cli.py
src/lmse/analyzers/: __init__.py  risk_analyzer.py
src/lmse/core/: evaluator.py
src/lmse/data/: __init__.py  scenario_loader.py
src/lmse/models/: base.py  claude.py  loader.py  openai.py
src/lmse/utils/: config.py  logger.py  patterns.py  report_generator.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_cli.py  test_config.py  test_evaluator.py  test_models.py  test_risk_analyzer.py
visualizations/: analysis_dashboard.ipynb
